Minor fix
Overlap of main section and buttons removed

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ p {
 
 .hlavna-sekcia {
     width: 85%;
-    margin-top: 5vh;
+    margin-top: 80px;
     margin-right: 5vw;
     background: var(--main-color1);
     box-shadow: 5px 5px 7px 5px var(--main-color3);
@@ -190,23 +190,25 @@ nav {
     transition: all 0.2 ease;
 }
 
-p {
-    line-height: 1em;
+h1 {
+    line-height: 2em;
 }
+
+
 
 .active {
     left: 0;
 }
 
 .hlavna-sekcia {
-    margin-top: 30px;
+    margin-top: 80px;
     margin-left: 40px;
     margin-right: 40px;
     width: 90%;
 }
 
 .basen {
-    line-height: 1.2em;
+    line-height: 1.5em;
     margin: 10px;
 }
 
